[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "activegraph-memory"
version = "0.4.0"
description = "Semantic and epistemic memory pack for ActiveGraph"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Yohei Nakajima" },
]
keywords = [
    "activegraph",
    "memory",
    "semantic-memory",
    "agent-memory",
    "knowledge-graph",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "activegraph[llm]>=1.5,<2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "activegraph[llm]>=1.5,<2.0",
    "pydantic>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/yoheinakajima/activegraph-memory"
Repository = "https://github.com/yoheinakajima/activegraph-memory"
Issues = "https://github.com/yoheinakajima/activegraph-memory/issues"

[project.entry-points."activegraph.packs"]
activegraph_memory = "activegraph_memory:pack"

[tool.setuptools.packages.find]
where = ["."]
include = ["activegraph_memory*"]

[tool.setuptools.package-data]
"*" = [
    "manifest.toml",
    "prompts/*.md",
    "fixtures/*.yaml",
    "fixtures/*.json",
    "README.md",
    "CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
